# typescript-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
ast/: Cargo.toml
ast/src/ast/: class.rs  function.rs  ifelse.rs  interface.rs  mod.rs  module.rs  operation.rs  repeat.rs  statement.rs  switch.rs  trycatch.rs  tstype.rs  typedefinition.rs  value.rs
ast/src/parser/: class.rs  expression.rs  function.rs  ifs.rs  interface.rs  mod.rs  repeat.rs  switch.rs  typescript.pest
jit/: Cargo.toml
jit/src/: callbacks.rs  context.rs  error.rs  lib.rs  main.rs  module.rs  value.rs
jit/src/builder/: functions.rs  ifs.rs  mod.rs  repeat.rs  statement.rs  switch.rs  value.rs
jit/src/stdlib/: mod.rs
samples/: globals.ts  main.js  sample.ts  stanFactory.ts  tsconfig.json
src/: lib.rs  main.rs
src/ast/: mod.rs  operation.rs  statement.rs  tstype.rs
src/jit/: mod.rs  module.rs
src/parser/: mod.rs  typescript.pest
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: assigns.rs  assigns.ts  functions.rs  functions.ts  ifs.rs  ifs.ts  loops.rs  loops.ts  switches.rs  switches.ts  trycatch.rs  trycatch.ts
