[package]
name = "typescript-jit"
version = "0.0.1"
edition = "2021"
authors = ["Void <arne_simon@gmx.de>"]
description = "A native Typescript parser and JIT runner."
documentation = "https://docs.rs/typescript-jit"
repository = "https://github.com/void-dragon/typescript"
readme = "../README.md"
keywords = ["typescript", "javascript", "ts", "js", "awesome"]
categories = ["compilers", "parsing"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
lto = true

[features]
# default = ["trace"]
default = []
trace = []

[dependencies]
typescript-ast = {path = "../ast"}
clap = {version = "4", features = ["derive"]}
log = {version = "0.4", features = ["std"]}
llvm-sys = "140"
sha2 = "0.10"
hex = "0.4"